RasaExampleParser/.antlr/RasaIntentExample.g4
grammar RasaIntentExample;

example			:	(text+ entityExample*)+
				|	(entityExample+ text*)+;
text			:	WORD+ ;
entityExample	:	'[' entityValue '](' entityName ')' ;
entityValue		:	WORD+ ;
entityName		:	WORD+ ;

WORD			:	Letter+ ;

fragment Letter :	[a-zA-Z$_0-9\-]
				|	~[\u0000-\u007F\uD800-\uDBFF]
				|	[\uD800-\uDBFF] [\uDC00-\uDFFF]
				|	[ \t\r\n]+
				|	[,;.:%&#"?]
				;
